--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "lint": "eslint part1 --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "test": "vitest",
     "server": "json-server -p3001 --watch db.json"
   },
   "dependencies": {
@@ -16,6 +17,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
@@ -24,9 +28,11 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "jsdom": "^23.2.0",
     "json-server": "^0.17.4",
     "prettier": "^3.1.0",
     "typescript": "^5.3.2",
-    "vite": "^5.0.0"
+    "vite": "5.0.5",
+    "vitest": "^1.2.0"
   }
 }
